style.css
        
#wrapper {
    position: absolute;
    left: 30%;
    top: 20%;
    width: 500px;
    height: 500px;
    border: 1px solid purple;
}
#startTime {
    background-color: purple;
    margin-left: 33%;
    padding: 15px 32px;
    font-size: 20px;
    color: white;
}
#questionsDiv {
    margin: 20px;
}

#currentTime {
    float: right;
}

#Back {
    background-color: purple;
    position: relative;
    padding: 10px;
    font-size: 20px;
    color: white;
    top: 30%;
    left: 55%;
    width: auto;
    text-align: center;
    text-decoration: none;
}



#clear {
    background-color: purple;
    position: relative;
    padding: 10px;
    font-size: 20px;
    color: white;
    top: 30%;
    right: 5%;
    text-align: center;
        }

button {
    border-radius: 8px;
}

textarea {
    width: 90%;
    margin: 20px;
}

#Submit {
    background-color: purple;
    margin-left: 33%;
    padding: 15px 32px;
    font-size: 20px;
    color: white;
        }

label {
    margin-right: 10px;
        }
input {
    margin-bottom: 20px;
    width: 50%;
    border: 1px solid lightgray;
}

h1 {
    text-align: center;
}

li {
    background-color: purple;
    margin-top: 10px;
    padding: 5px 15px;
    width: 80%;
    font-size: 18px;
    color: white;
        }

#divCreate {
    margin-top: 20px;
    border-top: 1px solid lightgray;
        }


@media screen and (max-width: 786px) {
body {
    max-width: 786px;
}
    
#wrapper {
        position: absolute;
        left: 20%;
}

a {
        margin-left: 20%;
}
#goBack {
    position: relative;
    left: 55%;
}

#clear {
    position: relative;
    right: 5%;
    }
}
        
 
@media screen and (max-width: 640px) {
body {
    min-width: 640px;
}
   
#wrapper {
position: absolute;
left: 10%;
}

a {
    margin-left: 10%;
}

     
}

